make runIde work in debug mode for java 11